--- a/client/styles/playerStyle.styl
+++ b/client/styles/playerStyle.styl
@@ -7,23 +7,26 @@ li
 
 .song-row
   white-space: nowrap
-  overflow: hidden
-  width: 100%
+  display: flex
+  flex-wrap: nowrap
+  justify-content: space-between
 
 .song-title
   font-weight: bold
 
 .song-title, .song-genre
-  width: 50%
   overflow: hidden
   text-overflow: ellipsis
   display: inline-block
+  flex-shrink: 0
+  margin-right: 1em
+
 
 .song-artist, .song-album
   float: right
   overflow: hidden
   text-overflow: ellipsis
-  width: 50%
+  flex-shrink: 10
 
 ul
   list-style-type: none
