fix lint file and styling

--- a/client/styles/playerStyle.styl
+++ b/client/styles/playerStyle.styl
@@ -3,7 +3,8 @@ li
   list-style: none
   display: block
   border: 1px solid
-  margin: 1px
+  margin: 0px
+  margin-bottom: -1px
 
 .song-row
   white-space: nowrap
