--- a/client/styles/_skin.scss
+++ b/client/styles/_skin.scss
@@ -1,5 +1,2 @@
-@import 'skin/_reset';
-@import 'skin/_typeface';
-@import 'skin/_colors';
-@import 'skin/_elements';
-@import 'skin/_icons';
+@import 'skin/_function';
+@import 'skin/_default';
