--- a/client/styles/config/_colors.scss
+++ b/client/styles/config/_colors.scss
@@ -1,8 +1,8 @@
 $foreground-color: #592a71; 
 $header-background-color: #3f035e; 
-$header-foreground-color: #592a71; 
+$header-foreground-color: #898a71; 
 $body-background-color: #aaa; 
-$title-color: #83718c; 
+$title-color: #b3b1bc; 
 
 
 
