--- a/client/styles/skin/_function.scss
+++ b/client/styles/skin/_function.scss
@@ -1,6 +1,6 @@
 @mixin animated-scale($scale) {
   transform: scale($scale);
-  transition: transform 0.5s;
+  transition: transform .5s;
   transform-origin: top right;
 }
 
@@ -23,8 +23,9 @@
   z-index: 10;
   margin-right: 2em;
 
-  &:before {
+  &::before {
     @include arrow-up($header-foreground-color);
+
     bottom: 100%;
     right: 0%;
   }
